; ModuleID = '/home/carl/AnghaBench/reactos/base/applications/regedit/extr_framewnd.c_OnEnterMenuLoop.c'
source_filename = "/home/carl/AnghaBench/reactos/base/applications/regedit/extr_framewnd.c_OnEnterMenuLoop.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@hStatusBar = common dso_local global i32 0, align 4
@SB_SETPARTS = common dso_local global i32 0, align 4
@TRUE = common dso_local global i32 0, align 4
@bInMenuLoop = common dso_local global i32 0, align 4
@SB_SETTEXTW = common dso_local global i32 0, align 4
@.str = private unnamed_addr constant [1 x i32] zeroinitializer, align 4
@llvm.used = appending global [1 x i8*] [i8* bitcast (void (i32)* @OnEnterMenuLoop to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal void @OnEnterMenuLoop(i32 %0) #0 {
  %2 = alloca i32, align 4
  %3 = alloca i32, align 4
  store i32 %0, i32* %2, align 4
  %4 = load i32, i32* %2, align 4
  %5 = call i32 @UNREFERENCED_PARAMETER(i32 %4)
  store i32 -1, i32* %3, align 4
  %6 = load i32, i32* @hStatusBar, align 4
  %7 = load i32, i32* @SB_SETPARTS, align 4
  %8 = ptrtoint i32* %3 to i32
  %9 = call i32 @SendMessageW(i32 %6, i32 %7, i32 1, i32 %8)
  %10 = load i32, i32* @TRUE, align 4
  store i32 %10, i32* @bInMenuLoop, align 4
  %11 = load i32, i32* @hStatusBar, align 4
  %12 = load i32, i32* @SB_SETTEXTW, align 4
  %13 = call i32 @SendMessageW(i32 %11, i32 %12, i32 0, i32 ptrtoint ([1 x i32]* @.str to i32))
  ret void
}

declare dso_local i32 @UNREFERENCED_PARAMETER(i32) #1

declare dso_local i32 @SendMessageW(i32, i32, i32, i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
